# subtractive-synth

./: Cargo.toml  README.md
src/: lib.rs  main.rs  subtractive_synth.rs
