[package]
name = "subtractive-synth"
version = "0.3.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
license = "Creative Commons BY-NC-SA 4.0"
repository = "https://github.com/thenyeguy/oxcable-subtractive-synth"
description = "A subtractive synthesizer in Rust."

[lib]
name = "oxcable_subtractive_synth"
path = "src/subtractive_synth.rs"

[dependencies]
oxcable = "0.4.*"
