[package]
name = "oxcable-subtractive-synth"
version = "0.4.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
license = "MIT"
repository = "https://github.com/thenyeguy/oxcable-subtractive-synth"
description = "A subtractive synthesizer in Rust."

[[bin]]
name = "run-subtractive-synth"

[dependencies]
oxcable = "0.4.*"
