[package]
name = "oxcable-subtractive-synth"
version = "0.4.1"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
license = "MIT"
repository = "https://github.com/oxcable/subtractive-synth"
description = "A subtractive synthesizer in Rust."

[[bin]]
name = "run-subtractive-synth"

[dependencies]
oxcable = "0.5.1"
oxcable-basic-devices = "0.5.1"
